# hic

./: .gitignore  .pre-commit-config.yaml  .workflow-index.yml  README.rst  environment.yml  pyproject.toml
.github/workflows/: apptainer.yml  main.yml  pypi.yml
doc/: conf.py  index.rst
sequana_pipelines/hic/: __init__.py  config.yaml  hic.rules  main.py  multiqc_config.yaml  schema.yaml  tools.txt
sequana_pipelines/hic/src/: HiC_QC_report_template.md  hic_qc.py  report_template.md  style.css
test/: test_main.py
test/data/: chr1.fa
