[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"


[project]
name = "sequana-hic"
version = "0.0.1"
description = "Hi-C analysis, snakemake, sequana, container, reproducibility"
authors = [{name="Sequana Team", email="thomas.cokelaer@pasteur.fr"}]
license = "BSD-3"
repository = "https://github.com/sequana/hic"
readme = "README.rst"
keywords = ['Hi-C analysis, snakemake, sequana, container, reproducibility']
classifiers = [
        "Development Status :: 4 - Beta",
        #"Development Status :: 5 - Production/Stable",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.9",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]

requires-python = ">=3.9,<4.0"
dependencies = [
    "sequana >=0.17.0",
    "sequana_pipetools >=1.0.0",
    "click-completion >=0.5.2",
    "cooler >=0.10.3",
    "pdfkit (>=1.0.0,<2.0.0)"
]

[tool.poetry]
packages = [
    {include = "sequana_pipelines"}
]


[project.scripts]
sequana_hic = "sequana_pipelines.hic.main:main"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
mock = "^5.1.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

