[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "sequana-hic"
version = "0.1.0"
description = "Hi-C analysis, snakemake, sequana, container, reproducibility"
authors = ["Sequana Team"]
license = "BSD-3"
repository = "https://github.com/sequana/hic"
readme = "README.rst"
keywords = ["Hi-C", "snakemake", "sequana", "container", "reproducibility"]
classifiers = [
        "Development Status :: 4 - Beta",
        "Intended Audience :: Education",
        "Intended Audience :: End Users/Desktop",
        "Intended Audience :: Developers",
        "Intended Audience :: Science/Research",
        "License :: OSI Approved :: BSD License",
        "Operating System :: POSIX :: Linux",
        "Programming Language :: Python :: 3.10",
        "Programming Language :: Python :: 3.11",
        "Programming Language :: Python :: 3.12",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Topic :: Scientific/Engineering :: Bio-Informatics",
        "Topic :: Scientific/Engineering :: Information Analysis",
]

packages = [
    {include = "sequana_pipelines"}
]


[tool.poetry.dependencies]
python = ">=3.10,<4.0"
sequana = ">=0.17.0"
sequana-pipetools = ">=1.0.0"
sequana-wrappers = ">=26.4.1"
cooler = ">=0.10.3"
pdfkit = ">=1.0.0,<2.0.0"
snakemake = ">=7.32"
pulp = ">=2.8"

[tool.poetry.scripts]
sequana_hic = "sequana_pipelines.hic.main:main"


[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
pytest = "^7.4.0"
mock = "^5.1.0"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"
